# USDPluginExamples

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: Defaults.cmake  Options.cmake  Packages.cmake  USDPluginTools.cmake
src/: CMakeLists.txt
src/hdEpiphyte/: CMakeLists.txt  epiphyteSceneIndex.cpp  epiphyteSceneIndex.h  hdEpiphyteSchema.cpp  hdEpiphyteSchema.h  plugInfo.json  sceneIndexPlugin.cpp  sceneIndexPlugin.h
src/hdGpTri/: CMakeLists.txt  debugCodes.cpp  debugCodes.h  plugInfo.json  triGenerative.cpp  triGenerative.h
src/hdGpTri/scenes/: triangle.usda  triangleAnimated.usda
src/hdTri/: CMakeLists.txt  debugCodes.cpp  debugCodes.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.cpp  renderParam.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h
src/usdEpiphyte/: CMakeLists.txt  __init__.py  api.h  epiphyteAPI.cpp  epiphyteAPI.h  generatedSchema.usda  module.cpp  moduleDeps.cpp  plugInfo.json  schema.usda  tokens.cpp  tokens.h  wrapEpiphyteAPI.cpp  wrapTokens.cpp
src/usdEpiphyte/scenes/: wave.usda
src/usdEpiphyteImaging/: CMakeLists.txt  epiphyteAPIAdapter.cpp  epiphyteAPIAdapter.h  plugInfo.json
src/usdTri/: CMakeLists.txt  __init__.py  api.h  generatedSchema.usda  module.cpp  moduleDeps.cpp  plugInfo.json  schema.usda  tokens.cpp  tokens.h  triangle.cpp  triangle.h  triangleCounter.cpp  wrapTokens.cpp  wrapTriangle.cpp
src/usdTri/scenes/: expandingTriangle.usda  triangle.usda
src/usdTri/tests/: CMakeLists.txt  testTriangle.cpp  testTriangle.py
src/usdTriFileFormat/: CMakeLists.txt  fileFormat.cpp  fileFormat.h  plugInfo.json
src/usdTriFileFormat/scenes/: empty.triangle  triangle.usda
src/usdTriFileFormat/tests/: CMakeLists.txt  testFileFormat.py
src/usdTriImaging/: CMakeLists.txt  debugCodes.cpp  debugCodes.h  plugInfo.json  triangleAdapter.cpp  triangleAdapter.h
src/usdTriImagingHd2/: CMakeLists.txt  dataSourceTri.cpp  dataSourceTri.h  debugCodes.cpp  debugCodes.h  plugInfo.json  triangleAdapter.cpp  triangleAdapter.h
src/usdviewTri/: CMakeLists.txt  __init__.py  plugInfo.json
